@@ -1,5 +1,6 @@
 package com.retail_project.copilot;
 
+import com.retail_project.exceptions.OrderNotFoundException;
 import com.retail_project.order.OrderResponse;
 import com.retail_project.order.OrderService;
 import lombok.RequiredArgsConstructor;
@@ -28,76 +29,82 @@ public class CopilotService {
         String email = auth.getName();
         Integer customerId = orderService.getCustomerIdByEmail(email);
 
+
         boolean talkingAboutOrders = msg.contains("order") || msg.contains("delayed") || msg.contains("shipping");
         boolean talkingAboutPayment = msg.contains("payment") || msg.contains("stripe") || msg.contains("charged");
+        boolean talkingAboutCancel = msg.contains("cancel");
 
-        if ((talkingAboutOrders || talkingAboutPayment) && orderId == null) {
+        if ((talkingAboutOrders || talkingAboutPayment || talkingAboutCancel) && orderId == null) {
             return new CopilotResponse("Sure — please provide your orderId (example: 752).", actions);
         }
+
 
         if (orderId != null) {
             try {
                 OrderResponse order = orderService.getOrderDetails(orderId, customerId);
 
-                // Fixed the stream logic
+
+                if (talkingAboutCancel) {
+                    if ("PENDING".equalsIgnoreCase(order.status().name())) {
+                        actions.add(new CopilotAction("CANCEL_ORDER_CONFIRM", Map.of("orderId", orderId), "Cancel this order"));
+                    } else {
+                        actions.add(new CopilotAction("CANCEL_NOT_ALLOWED", Map.of("orderId", orderId), "Only PENDING orders can be cancelled"));
+                    }
+                }
+
                 String itemsText = (order.items() == null || order.items().isEmpty())
                         ? "no items"
                         : order.items().stream()
-                        .map(i -> i.quantity()+ " x " + i.productName())
+                        .map(i -> i.quantity() + " x " + i.productName())
                         .collect(Collectors.joining(", "));
 
                 String facts = String.format(
-                        "Order reference: %s. Total: $%.2f. Items: %s. Created: %s.",
+                        "Order reference: %s. Status: %s. Total: $%.2f. Items: %s. Created: %s.",
                         order.reference(),
+                        order.status(),
                         order.totalAmount(),
                         itemsText,
                         order.createdDate().toString()
                 );
-                actions.add(new CopilotAction(
-                        "OPEN_ORDER_DETAILS",
-                        Map.of("orderId", orderId),
-                        "View order details"
-                ));
 
-                actions.add(new CopilotAction(
-                        "CHECK_PAYMENTS",
-                        Map.of("orderId", orderId),
-                        "Check payment status"
-                ));
+                actions.add(new CopilotAction("OPEN_ORDER_DETAILS", Map.of("orderId", orderId), "View order details"));
+                actions.add(new CopilotAction("CHECK_PAYMENTS", Map.of("orderId", orderId), "Check payment status"));
+
                 String answer = polishWithOpenAI(req.message(), facts);
                 return new CopilotResponse(answer, actions);
 
-            } catch (Exception e) {
-                return new CopilotResponse(
-                        "I couldn’t find that order for your account. Please double-check the orderId.",
-                        actions
-                );
+            } catch (OrderNotFoundException e) {
+                return new CopilotResponse("I couldn’t find that order for your account.", actions);
+            }
+            catch (RuntimeException e) {
+                return new CopilotResponse("I couldn’t access that order for your account.", actions);
+            }
+            catch (Exception e) {
+                return new CopilotResponse("Something went wrong while reading your order. Please try again.", actions);
             }
         }
 
-        return new CopilotResponse(
-                "I can help with orders and payments. Ask “Where is my order?” and include orderId=752.",
-                actions
-        );
+        return new CopilotResponse("I can help with orders and payments. Try: 'Where is my order 752?'", actions);
     }
 
     private String polishWithOpenAI(String userMessage, String facts) {
-        String prompt = """
-        You are a retail support assistant.
-        Rules:
-        1) Use ONLY these facts: %s
-        2) Don't invent status. Include reference and total.
-        3) 2-4 sentences.
-        User message: %s
-        """.formatted(facts, userMessage);
+        String prompt = String.format("""
+            You are a retail support assistant. 
+            Rules:
+            1) Use ONLY these facts: %s
+            2) Don't invent status. Include reference and total.
+            3) Keep it to 2-4 sentences.
+            User message: %s
+            """, facts, userMessage);
 
         var params = ChatCompletionCreateParams.builder()
                 .model(model)
+                .addSystemMessage("You are a retail support assistant. Use only provided facts. Do not invent.")
                 .addUserMessage(prompt)
                 .build();
 
-        return openAIClient.chat().completions().create(params)
-                .choices().get(0).message().content()
-                .orElse("I'm sorry, I'm having trouble with my AI brain right now."); // Fixed Optional
+
+        var response = openAIClient.chat().completions().create(params);
+        return response.choices().get(0).message().content().orElse("I can see your order, but I'm having trouble phrasing a response.");
     }
 }
